--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "lint": "eslint .",
     "test": "mocha ./test/test*.js --reporter spec",
     "test-coverage": "istanbul cover ./node_modules/.bin/_mocha -- test/test.js test/test-ratelimit.js --reporter spec",
-    "start": "npm install && node server.js"
+    "start": "node server.js"
   },
   "engines": {
     "node": ">=0.10.0"
